<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/_16sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_corner_top_round"
    android:backgroundTint="@color/bottom_sheet_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/speed"
        android:contentDescription="@string/imageview"
        android:text="@string/add_to_playlist"
        style="@style/CustomTextStyleSemiBold20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/background_radius_8"
        app:layout_constraintTop_toBottomOf="@id/speed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:hint="@string/new_playlist"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_14sdp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textColorHint="#79767A"
        android:backgroundTint="@color/unselect_button"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/cancelBtn"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:background="@drawable/background_selected_100dp"
            android:backgroundTint="#322F37"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp">


            <TextView
                style="@style/CustomTextStyleSemiBold14sp"
                android:text="@string/cancel"
                android:textColor="#AEAAAE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/createBtn"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:background="@drawable/background_selected_100dp"
            android:backgroundTint="#322F37"
            android:orientation="horizontal"
            android:layout_width="0dp"
            style="@style/CustomTextStyleSemiBold14sp"
            android:text="@string/create"
            android:layout_height="@dimen/_44sdp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>