<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_radius_28"
    android:orientation="vertical"
    android:padding="@dimen/_24sdp">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/clear_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="@style/CustomTextStyleSemiBold22sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/deleteQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_question"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="start"
        style="@style/CustomTextStyle14sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_40sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="#605D62"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="?android:selectableItemBackground"
            style="@style/CustomTextStyleSemiBold14sp" />

        <TextView
            android:id="@+id/textOk"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_40sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="#FF5449"
            android:text="@string/delete"
            android:gravity="center"
            android:background="?android:selectableItemBackground"
            style="@style/CustomTextStyleSemiBold14sp" />
    </LinearLayout>
</LinearLayout>