<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allFunctions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/folderSize"
            style="@style/CustomTextStyleMedium12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/one_folder" />

        <ImageView
            android:id="@+id/selectButton"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/imageview"
            android:src="@drawable/icon_select" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchBar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <EditText
            android:id="@+id/searchText"
            android:drawableStart="@drawable/icon_gray_search"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColor="@color/white"
            android:textColorHint="@color/top_selected"
            android:layout_height="match_parent"
            android:backgroundTint="#1F1637"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/search_song_name"
            style="@style/CustomTextStyle16sp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:background="@drawable/background_radius_gradient_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/imageview"
            android:layout_width="@dimen/_104sdp"
            android:layout_height="@dimen/_104sdp"
            android:src="@drawable/icon_no_data"/>

        <TextView
            android:text="@string/no_folder"
            style="@style/CustomTextStyle14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allFolders"
        tools:listitem="@layout/item_folder"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fixedFunctionLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_52sdp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:progressTint="@color/progressBar"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/fixedFunctionLayout"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingVertical="@dimen/_16sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:background="@color/black_8_0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/playButton"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:orientation="vertical"
            android:layout_height="@dimen/_48sdp"
            tools:ignore="UseCompoundDrawables">
            
            <ImageView
                android:id="@+id/playIcon"
                android:src="@drawable/icon_mini_play"
                android:layout_width="@dimen/_24sdp"
                android:contentDescription="@string/imageview"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:id="@+id/playTitle"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/play"
                android:textColor="@color/gray"
                style="@style/CustomTextStyle14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addPlaylist"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="@dimen/_48sdp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/addPlaylistIcon"
                android:src="@drawable/icon_gray_playlist"
                android:layout_width="@dimen/_24sdp"
                android:contentDescription="@string/imageview"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:id="@+id/addPlaylistTitle"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/add_to_playlist"
                android:textColor="@color/gray"
                style="@style/CustomTextStyle14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteButton"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="@dimen/_48sdp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/deleteIcon"
                android:src="@drawable/icon_gray_delete"
                android:layout_width="@dimen/_24sdp"
                android:contentDescription="@string/imageview"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:id="@+id/deleteTitle"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/delete"
                android:textColor="@color/gray"
                style="@style/CustomTextStyle14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>