<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/_40sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topController"
        android:paddingStart="@dimen/_14sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:contentDescription="@string/imageview"
            android:src="@drawable/icon_back_black"
            android:padding="@dimen/_4sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/applyBtn"
            app:layout_constraintBottom_toBottomOf="@id/applyBtn"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp" />

        <TextView
            android:id="@+id/appName"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintEnd_toStartOf="@id/applyBtn"
            app:layout_constraintTop_toTopOf="@id/applyBtn"
            app:layout_constraintBottom_toBottomOf="@id/applyBtn"
            android:text="@string/select_language"
            style="@style/CustomTextStyleBold20sp"
            android:layout_width="0dp"
            android:maxLines="1"
            android:focusable="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingHorizontal="@dimen/_4sdp"
            android:layout_height="@dimen/_28sdp"/>

        <TextView
            android:id="@+id/applyBtn"
            android:text="@string/apply"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/_14sdp"
            style="@style/CustomTextStyleMedium12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_language_select"
            android:paddingVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_24sdp"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_32sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allLanguages"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/_14sdp"
        android:layout_height="0dp"
        tools:listitem="@layout/rcv_language"
        app:layout_constraintBottom_toTopOf="@+id/frNative"
        app:layout_constraintTop_toBottomOf="@id/topController"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <FrameLayout
        android:id="@+id/frNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>